--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -1,5 +1,5 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.29
+.\" Translation of CVS revision 1.30
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Dpkg-sviten"
 .SH NAMN
 dpkg \- en mellannivåpakethanterare för Debian
@@ -532,6 +532,14 @@ Programmet \fBdpkg\fP kommer att exekvera när ett nytt skal startas.
 .B COLUMNS
 Sätter antalet kolumner \fBdpkg\fP skall använda när formaterad text visas.
 Används för närvarande enbart av -l.
+.TP
+.B DPKG_OLD_CONFFILE
+Sätts av \fBdpkg\fP till filnamnet för den gamla konfigurationsfilen när
+du startar ett skal för att undersöka en ändrad konfigurationsfil.
+.TP
+.B DPKG_NEW_CONFFILE
+Sätts av \fBdpkg\fP till filnamnet för den nya konfigurationsfilen när
+du startar ett skal för att undersöka en ändrad konfigurationsfil.
 
 .SH EXEMPEL
 För att lista paket relaterade till textredigeringsprogrammet vi:
