Swedish translation updates

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 16 18:14:16 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/deb.5, doc/sv/deb-old.5, doc/sv/dselect.8, doc/sv/dpkg.8:
+    Swedish translation updates.
+
 Mon Jul 16 17:19:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/basecmds.cc, dselect/dselect.h: 
