--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 17 00:36:32 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/dselect.8: document new search features
+
 Mon Jul 16 18:14:16 CEST 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/deb.5, doc/sv/deb-old.5, doc/sv/dselect.8, doc/sv/dpkg.8:
