Fix syntax errors

--- a/po/sv.po
+++ b/po/sv.po
@@ -4004,7 +4004,7 @@ msgid ""
 "Press a key from the list above, <enter>, `q' or `Q' to exit help,\n"
 "  or <space> to read each help page in turn. "
 msgstr ""
-"Tryck en tangent från listan ovan, <Enter>, "q" eller "Q" avslutar hjälpen,\n"
+"Tryck en tangent från listan ovan, <Enter>, \"q\" eller \"Q\" avslutar hjälpen,\n"
 "  eller <mellanslag> för att läsa hjälpsidorna i sekvens. "
 
 #: dselect/basecmds.cc:158
@@ -4388,7 +4388,7 @@ msgstr ""
 "Flaggor: --admindir <katalog>  (förval är /var/lib/dpkg)\n"
 "         --help  --version  --license  --expert  --debug <fil> | -D<fil>\n"
 "         --colour skärmdel:[förgrund],[bakgrund][:attr[+attr+..]]\n"
-"Handlingar: access update select install config remove quit\n"\n"
+"Handlingar: access update select install config remove quit\n"
 
 #: dselect/main.cc:176
 msgid "Screenparts:\n"
