Update fuzzy Russian translations

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 18 01:04:15 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/ru.po: Updated
+
 Tue Jul 17 16:53:12 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
   
   * Merge changes from v1_9 branch
