install dpkg-query as well

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,7 +30,7 @@ dpkg (1.10) unstable; urgency=low
     and can search in package descriptions as well.
     Closes: Bug#81009,#83139
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Tue, 17 Jul 2001 22:05:38 +0200
 
 dpkg (1.9.16) unstable; urgency=low
 
