Add support for configurable package listings (not complete yet)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 24 19:07:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/showpkg.c, main/query.h: new files
+  * main/query.c: add support for show options
+
 Wed Jul 18 17:28:38 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/Makefile.in, debian/rules: install dpkg-query as well
