Mark dselect window resize bug as closeable

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,8 +32,9 @@ dpkg (1.10) unstable; urgency=low
   * Move query commands into a seperate dpkg-query command. For the old options
     (-L,-l,-s,-S) dpkg will still call it for you.
   * Add configurable package listing support to dpkg-query
+  * Handle window resize in dselect main menu. Closes: Bug#98275
 
- -- Wichert Akkerman <wakkerma@debian.org>  Tue, 17 Jul 2001 22:05:38 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
 dpkg (1.9.16) unstable; urgency=low
 
