--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Jul 26 14:27:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/Makefile.in, doc/fr/Makefile.in, doc/ja/Makefile.in,
+    debian/rules: no longer install update-rc.d, it moved to the sysvinit
+    package
+
 Thu Jul 26 13:52:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * utils/start-stop-daemon.c: seems glibc has a completely non-standard
