--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Thu Jul 26 14:27:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
   * scripts/Makefile.in, doc/fr/Makefile.in, doc/ja/Makefile.in,
     debian/rules: no longer install update-rc.d, it moved to the sysvinit
     package
+  * debian/control: Update sysvinit conflicts to version 2.80
 
 Thu Jul 26 13:52:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
