changed things around to dpkg-query builds more easily

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 27 03:52:33 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/Makefile.in: changed things around to dpkg-query builds more
+    easily
+
 Fri Jul 27 03:43:52 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/query.c: remove -D from usage, we don't support it
