Move parsedump.h to include

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 27 03:54:34 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/parsedump.h: move to include/parsedump.h so dpkg-query can
+    use it
+
 Fri Jul 27 03:52:33 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/Makefile.in: changed things around to dpkg-query builds more
