Update Danish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 27 04:04:26 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/da.po: Updated
+
 Fri Jul 27 03:54:34 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * lib/parsedump.h: move to include/parsedump.h so dpkg-query can
