--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 27 04:21:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/control: fix typo in section for dpkg-doc, correct
+    replaces for dselect and remove Linux references
+
 Fri Jul 27 04:05:55 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/POTFILES.in: add main/query.c and main/showpkg.c
