--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 31 12:26:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/de.po: Updated
+
 Fri Jul 27 04:21:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/control: fix typo in section for dpkg-doc, correct
