--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Tue Jul 31 12:26:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
   * po/de.po: Updated
   * main/query.c: Fix help texts a bit to reflect that dpkg-query is
     not dpkg
+  * dselect/main.cc: Use `colour' consistently for printed texts.
 
 Fri Jul 27 04:21:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
