fmt can't be const since we free it in the same function

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Aug  1 15:10:06 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * main/query.c: fmt can't be const since we free it in the same function
+
 Tue Jul 31 12:26:41 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/de.po: Updated
