--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug  1 15:35:32 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/copyright: mention we have copyright for 2001 as well
+  * main/query.c: improve help and version texts
+  * main/main.c: use DPKG define in printversion output
+
 Wed Aug  1 15:10:06 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/query.c: fmt can't be const since we free it in the same function
