Add dpkg-query manpage

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,7 +35,7 @@ dpkg (1.10) unstable; urgency=low
   * Handle window resize in dselect main menu. Closes: Bug#98275
   * update-rc.d moved to the sysvinit package
 
- -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
+ -- Wichert Akkerman <wakkerma@debian.org>  Wed,  1 Aug 2001 15:12:57 +0200
 
 dpkg (1.9.16) unstable; urgency=low
 
