--- a/main/dpkg-query.8
+++ b/main/dpkg-query.8
@@ -43,6 +43,10 @@ installation-scripts are not listed.
 Search for a filename from installed packages. All standard shell
 wildchars can be used in the pattern.
 .TP
+\fB-p\fP |\fB--print-avail\fP package
+Display details about \fIpackage\fP, as found in
+\fI/var/lib/dpkg/available\fP.
+.TP
 \fB--licence\fP | \fB--license\fP
 Display licence and copyright information.
 .TP
