--- a/dpkg-deb/dpkg-deb.1
+++ b/dpkg-deb/dpkg-deb.1
@@ -1,6 +1,4 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.\" Authors: Ian Jackson
-.TH DPKG\-DEB 1 "1st June 1996" "Debian Project" "Debian GNU/Linux manual"
+.TH DPKG\-DEB 1 "1st June 1996" "Debian Project" "dpkg suite"
 .SH NAME 
 dpkg\-deb \- Debian package archive (.deb) manipulation tool
 .SH SYNOPSIS
