--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -1,5 +1,5 @@
 .\" Hey Emacs! This file is -*- nroff -*- source.
-.\" Translation of CVS revision 1.30
+.\" Translation of CVS revision 1.31
 .TH DPKG 8 "12 april 1998" "Debianprojektet" "Dpkg-sviten"
 .SH NAMN
 dpkg \- en mellannivåpakethanterare för Debian
@@ -24,7 +24,7 @@ Management Tools\fP i samma källa.
 
 .SH BESKRIVNING
 \fBdpkg\fP är ett mellannivåverktyg för att installera, bygga, ta bort och
-hantera Debian GNU/Linux-paket.
+hantera Debianpaket.
 Det primära och mer användarvänliga skalet runt \fBdpkg\fP är
 \fBdselect\fP(8).
 \fBdpkg\fP kontrolleras helt och hållet via kommandoradsflaggor, vilka
@@ -183,7 +183,7 @@ Med \fB--merge-avail\fP kombineras den gamla informationen med informationen
 från \fIPackages-filen\fP.
 Med \fB--update-avail\fP ersätts den gamla informationen med informationen
 från \fIPackages-filen\fP.
-\fIPackages-filerna\fP som medföljer Debian GNU/Linux heter helt enkelt
+\fIPackages-filerna\fP som medföljer Debian heter helt enkelt
 \fIPackages\fP.
 \fBdpkg\fP behåller sin lista över tillgängliga paket i
 \fI/var/lib/dpkg/available\fP.
@@ -291,9 +291,9 @@ Se \fBdpkg-deb\fP(1) för ytterligare information om följande åtgärder:
 
 .nf
 \fBdpkg -b\fP | \fB--build\fP \fIkatalog\fP [\fIfilnamn\fP]
-    Bygg ett Debian GNU/Linux-paket.
+    Bygg ett deb-paket.
 \fBdpkg -c\fP | \fB--contents\fP \fIfilnamn\fP
-    Listar innehållet i ett Debian GNU/Linux-paket.
+    Listar innehållet i ett deb-paket.
 \fBdpkg -e\fP | \fB--control\fP \fIfilnamn\fP [\fIkatalog\fP]
     Extraherar kontrollinformation från ett paket.
 \fBdpkg -x\fP | \fB--extract\fP \fIfilnamn katalog\fP
