Logged my changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Aug 11 22:54:18 CEST 2001 peter karlsson <peterk@debian.org>
+
+  * po/sv.po, doc/sv/dpkg.8: Updated Swedish translation.
+
 Wed Aug  1 17:31:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * main/dpkg-query.8: added
