--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug 16 00:43:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/fr.po: Updated
+
 Sat Aug 11 22:54:18 CEST 2001 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/dpkg.8: Updated Swedish translation.
