--- a/debian/changelog
+++ b/debian/changelog
@@ -33,7 +33,7 @@ dpkg (1.10) unstable; urgency=low
     (-L,-l,-s,-S) dpkg will still call it for you.
   * Add configurable package listing support to dpkg-query
   * Handle window resize in dselect main menu. Closes: Bug#98275
-  * update-rc.d moved to the sysvinit package
+  * update-rc.d moved to the sysvinit package. Closes: Bug#108887
 
  -- Wichert Akkerman <wakkerma@debian.org>  Wed,  1 Aug 2001 15:12:57 +0200
 
